--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -3,8 +3,13 @@
    text-align: center;
    
 }
-.play-button{
-    margin-left: auto;
-    margin-right: auto;
- padding: 10%;
+ion-button{
+   margin: 0 auto;
+}
+.name {
+   padding: 10%;
+   text-align: center;
+   font-family: Arial, Helvetica, sans-serif;
+   font-size: 40px;
+   font-weight: bold;
 }
